--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,3 +1,7 @@
+.z-i-9 {
+  z-index: 9 !important;
+}
+
 main,
 .container-fluid,
 body,
@@ -61,5 +65,38 @@ html {
 
 .ace-monokai .ace_gutter-active-line {
   background: rgba(255, 255, 255, 0.1) !important;
+}
+
+.app-bar-expand .app-bar-menu .d-menu {
+  background-color: #1c2731 !important;
+  border: 1px solid rgba(255, 255, 255, 0.1);
+  min-width: 250px;
+  box-shadow: none !important;
+  -moz-box-shadow: none !important;
+  -o-box-shadow: none !important;
+  -webkit-box-shadow: none !important;
+}
+
+.app-bar-expand .app-bar-menu .d-menu li,
+.app-bar-expand .app-bar-menu .d-menu a {
+  height: 30px !important;
+}
+
+.window {
+  z-index: 99999 !important;
+  border: none !important;
+  background-color: #1c2731 !important;
+}
+
+.window-caption {
+  background-color: #1c2731 !important;
+}
+
+.button {
+  background-color: transparent !important;
+}
+
+.btn-close:hover {
+  background-color: #d22424 !important;
 }
 
