--- a/resources/sass/app.sass
+++ b/resources/sass/app.sass
@@ -1,3 +1,11 @@
+=shadow($property)
+  box-shadow: $property
+  -moz-box-shadow: $property
+  -o-box-shadow: $property
+  -webkit-box-shadow: $property
+
+.z-i-9
+  z-index: 9 !important
 main , .container-fluid , body , html
   height: 100%
 .app-bar.thin-menu
@@ -36,3 +44,22 @@ main , .container-fluid , body , html
       background: rgba(255,255,255,0.1) !important
   .ace_gutter-active-line
     background: rgba(255,255,255,0.1) !important
+.app-bar-expand
+  .app-bar-menu
+    .d-menu
+      background-color: #1c2731 !important
+      border: 1px solid rgba(255,255,255,0.1)
+      min-width: 250px
+      +shadow(none !important)
+      li , a
+        height: 30px !important
+.window
+  z-index: 99999 !important
+  border: none !important
+  background-color: #1c2731 !important
+.window-caption
+  background-color: #1c2731 !important
+.button
+  background-color: transparent !important
+.btn-close:hover
+  background-color: #d22424 !important
