--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -2,6 +2,14 @@
   z-index: 9 !important;
 }
 
+.size-0 {
+  transform: scale(0);
+  -moz-transform: scale(0);
+  -ms-transform: scale(0);
+  -o-transform: scale(0);
+  -webkit-transform: scale(0);
+}
+
 main,
 .container-fluid,
 body,
@@ -92,11 +100,17 @@ html {
   background-color: #1c2731 !important;
 }
 
-.button {
-  background-color: transparent !important;
-}
-
 .btn-close:hover {
   background-color: #d22424 !important;
+}
+
+.ng-view {
+  height: 100% !important;
+}
+
+/* New Project SASS */
+
+.new_project input {
+  color: #ffffff !important;
 }
 
