Tabs handling completed !

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -57,6 +57,18 @@ html {
   bottom: 0;
 }
 
+.code-editor .editor .child {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
+
+.code-editor .editor .child.active {
+  z-index: 999999 !important;
+}
+
 .ace-monokai {
   background-color: #131a20 !important;
 }
