--- a/resources/sass/app.sass
+++ b/resources/sass/app.sass
@@ -11,10 +11,25 @@
   -o-transform: $property
   -webkit-transform: $property
 
+=text_select($property)
+  -webkit-touch-callout: $property !important
+  -webkit-user-select: $property !important
+  -khtml-user-select: $property !important
+  -moz-user-select: $property !important
+  -ms-user-select: $property !important
+  user-select: $property !important
+
+.thin-menu , .directory-structure , .editor-tabs , a
+  cursor: default !important
+  +text_select(none)
 .z-i-9
   z-index: 9 !important
 .size-0
   +transform(scale(0))
+.font-italic
+  font-style: italic !important
+.font-bold
+  font-weight: 700 !important
 main , .container-fluid , body , html
   height: 100%
 .app-bar.thin-menu
@@ -37,6 +52,7 @@ main , .container-fluid , body , html
   border-top: 1px solid #172028
   border-bottom: 1px solid rgba(255,255,255,0.1)
 .code-editor
+  height: calc(100% - 34px) !important
   .editor
     position: absolute
     top: 0
@@ -70,7 +86,7 @@ main , .container-fluid , body , html
       li , a
         height: 30px !important
 .window
-  z-index: 99999 !important
+  z-index: 999999999999 !important
   border: none !important
   background-color: #1c2731 !important
 .window-caption
@@ -107,12 +123,13 @@ main , .container-fluid , body , html
   color: #ffffff !important
   width: 250px !important
   border: 1px solid rgba(255,255,255,0.1) !important
+  z-index: 9999999 !important
+  li
+    border-bottom: none !important
+    font-size: 12px !important
+    cursor: default !important
 .iw-mSelected
   background-color: #117ae3 !important
-.iw-cm-menu li
-  border-bottom: none !important
-  font-size: 12px !important
-  cursor: default !important
 .iw-mIcon
   margin-left: 5px !important
 .editor-tabs
@@ -120,6 +137,8 @@ main , .container-fluid , body , html
   border-left: 1px solid #172028
   li
     border-bottom: 2px solid transparent
+    span.name
+      font-weight: 100
     img
       width: 20px
       height: 20px
