Close Project panel created !

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -234,6 +234,10 @@ html {
   color: #f24848 !important;
 }
 
+a:hover {
+  text-decoration: none !important;
+}
+
 /* New Project SASS */
 
 .new_project input {
@@ -242,5 +246,16 @@ html {
 
 li[data-text=""] {
   display: none !important;
+}
+
+/* Close Project SASS */
+
+.close_project img {
+  width: 30px;
+  margin-bottom: 7px;
+}
+
+.close_project .database_list li {
+  background-color: rgba(255, 255, 255, 0.1);
 }
 
