--- a/resources/sass/app.sass
+++ b/resources/sass/app.sass
@@ -148,9 +148,19 @@ main , .container-fluid , body , html
   color: rgba(255,255,255,0.4) !important
   &:hover
     color: #f24848 !important
+a:hover
+  text-decoration: none !important
 /* New Project SASS
 .new_project
   input
     color: #ffffff !important
 li[data-text=""]
   display: none !important
+/* Close Project SASS
+.close_project
+  img
+    width: 30px
+    margin-bottom: 7px
+  .database_list
+    li
+      background-color: rgba(255,255,255,0.1)
