--- a/resources/views/index.pug
+++ b/resources/views/index.pug
@@ -22,9 +22,7 @@ html(lang="fa")
                             a.dropdown-toggle(href="#!") File
                             ul.d-menu.fg-white(data-role="dropdown")
                                 li: a(href="#!newproject") New Project
-                                li: a(href="#!") New Project
-                                li: a(href="#!") New Project
-                                li: a(href="#!") New Project
+                                li: a(href="#!closeproject") Close Project
                         li: a(href="#!") View
                 .grid.ide-content
                     .row.no-gap.h-100
