--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -259,3 +259,15 @@ li[data-text=""] {
   background-color: rgba(255, 255, 255, 0.1);
 }
 
+.close_project .database_list li.active {
+  background-color: #117ae3 !important;
+}
+
+.close_project .files_list li {
+  background-color: rgba(255, 255, 255, 0.1);
+}
+
+.close_project .files_list li.active {
+  background-color: #117ae3 !important;
+}
+
