--- a/resources/sass/app.sass
+++ b/resources/sass/app.sass
@@ -164,10 +164,12 @@ li[data-text=""]
   .database_list
     li
       background-color: rgba(255,255,255,0.1)
+      cursor: default !important
       &.active
         background-color: #117ae3 !important
   .files_list
     li
       background-color: rgba(255,255,255,0.1)
+      cursor: default !important
       &.active
         background-color: #117ae3 !important
