--- a/resources/views/windows/close_project.pug
+++ b/resources/views/windows/close_project.pug
@@ -4,21 +4,22 @@
             img.mr-1.ml-3(src="assets/img/icons/folder-app.svg")
             = 'File Projects'
         ul.list-style-none.files_list
-            li.p-2.mb-1(ng-repeat="f in files_projects" data-path="{{f.path}}") {{f.name}}
+            li.p-2.mb-1(ng-repeat="f in files_projects" data-slug="{{f.path}}") {{f.name}}
     .col-md-4.fg-white(style="background:#131a20")
         h6
             img.mr-1.ml-3(src="assets/img/icons/database.svg")
             = 'Database Projects'
         ul.list-style-none.database_list
             li.p-2.mb-1(ng-repeat="d in database_projects" data-slug="{{d.slug}}") {{d.name}}
-    .col-md-4.d-flex.flex-justify-center.flex-align-center
+    .col-md-4.d-flex.flex-justify-center.flex-align-center.flex-column
         ul.list-style-none
             li.mb-2: a.fg-white(href="#!newproject")
                 i.mif-plus.mr-2
                 = 'Create New Project'
-            li.mb-2: a.fg-white
+            li.mb-2: a(ng-click="openProject()").fg-white
                 i.mif-folder-open2.mr-2
                 = 'Open Project'
             li.mb-2: a.fg-white
                 i.mif-layers-clear.mr-2
                 = 'Remove Project'
+        small.fg-red(ng-show="error === 'selection'") Please select a project
