--- a/resources/sass/app.sass
+++ b/resources/sass/app.sass
@@ -105,9 +105,9 @@ main , .container-fluid , body , html
   background-color: #1c2731
   li.li-selected
     background-color: #117ae3 !important
-  .database.collapsed:before
+  .database.collapsed:before , .Directory.collapsed:before
     content: "\e69b" !important
-  .database:before
+  .database:before , .Directory:before
     content: "\e66b"
     font-family: 'metro' !important
     margin-left: -7px
