--- a/resources/views/index.pug
+++ b/resources/views/index.pug
@@ -26,8 +26,8 @@ html(lang="fa")
                         li: a(href="#!") View
                 .grid.ide-content
                     .row.no-gap.h-100
-                        .cell-md-3.directory-structure.fg-white
-                        .cell-md-9
+                        .cell-md-3.directory-structure.fg-white.h-100
+                        .cell-md-9.h-100
                             .editor-tabs.fg-white
                                 ul.list-style-none.m-0.d-flex
                             .code-editor.w-100: .editor
