--- a/resources/views/index.pug
+++ b/resources/views/index.pug
@@ -1,6 +1,6 @@
 - use ACIDECore\App\View
 - $scripts = View::getScripts(['app' , 'ace'])
-- $styles = View::getStyles(['app' , 'fontawesome' , 'metro4' , 'context-menu'])
+- $styles = View::getStyles(['app' , 'fontawesome' , 'metro4' , 'context-menu' , 'simplebar'])
 
 doctype html
 html(lang="fa")
