--- a/resources/sass/app.sass
+++ b/resources/sass/app.sass
@@ -103,6 +103,14 @@ main , .container-fluid , body , html
   list-style: none !important
 .directory-structure
   background-color: #1c2731
+  li.dir
+    i.mif-chevron-thin-down
+      display: none
+  li.dir.collapsed
+    i.mif-chevron-thin-right
+      display: none
+    i.mif-chevron-thin-down
+      display: inline-block !important
   li.li-selected
     background-color: #117ae3 !important
   .database.collapsed:before , .Directory.collapsed:before
@@ -114,7 +122,6 @@ main , .container-fluid , body , html
     margin-right: 5px
   ul
     font-size: 13px
-  li
     img
       width: 20px
       margin-bottom: 3px
