--- a/resources/sass/app.sass
+++ b/resources/sass/app.sass
@@ -103,6 +103,8 @@ main , .container-fluid , body , html
   list-style: none !important
 .directory-structure
   background-color: #1c2731
+  li
+    min-width: 300px
   li.dir
     i.mif-chevron-thin-down
       display: none
@@ -125,6 +127,7 @@ main , .container-fluid , body , html
     img
       width: 20px
       margin-bottom: 3px
+      height: 20px
 .iw-cm-menu
   background: #1c2731 !important
   color: #ffffff !important
