--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -201,6 +201,10 @@ html {
   height: 20px;
 }
 
+.iw-cm-arrow-right {
+  border-left: 5px solid #ffffff !important;
+}
+
 .iw-cm-menu {
   background: #1c2731 !important;
   color: #ffffff !important;
