--- a/resources/sass/app.sass
+++ b/resources/sass/app.sass
@@ -128,6 +128,8 @@ main , .container-fluid , body , html
       width: 20px
       margin-bottom: 3px
       height: 20px
+.iw-cm-arrow-right
+  border-left: 5px solid #ffffff !important
 .iw-cm-menu
   background: #1c2731 !important
   color: #ffffff !important
