location.href converted to window.location.href

--- a/resources/views/index.pug
+++ b/resources/views/index.pug
@@ -46,7 +46,7 @@ html(lang="fa")
                         {
                             html: "<span class='mif-cross'></span>",
                             cls: "btn-close fg-white inherit-background",
-                            onclick: "$('.window').addClass('size-0');location.hash = '/'"
+                            onclick: "$('.window').addClass('size-0');window.location.hash = '/'"
                         }
                     ];
                 .h-100(data-role="window" data-place="center"
