Files extensions completed successfully

--- a/resources/views/index.pug
+++ b/resources/views/index.pug
@@ -10,6 +10,7 @@ html(lang="fa")
         meta(name="keywords" content="HTML,CSS,XML,JavaScript")
         meta(name="author" content="My name")
         meta(name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no")
+        meta(name="metro4:about" content="false")
         title ACIDE
         each $style in $styles
             != $style
