--- a/resources/views/windows/new_exe_file.pug
+++ b/resources/views/windows/new_exe_file.pug
@@ -1,10 +1,10 @@
 .p-5
-    form(name="newFileForm" novalidate)
+    form(name="newExeFileForm" novalidate)
         input.fg-white(type="text" data-role="materialinput"
             placeholder="Enter Your File Name" ng-model="file_name"
             name="name" required record-validation)
-        small.fg-red(ng-show="newFileForm.name.$dirty && newFileForm.name.$error.required") Name can not be empty
+        small.fg-red(ng-show="newExeFileForm.name.$dirty && newExeFileForm.name.$error.required") Name can not be empty
         br
-        small.fg-red(ng-show="newFileForm.name.$dirty && newFileForm.name.$invalid") Name is invalid
-    button.button.primary.mt-5.float-right(ng-click="createFile()"
-        ng-disabled="newFileForm.name.$invalid") Create
+        small.fg-red(ng-show="newExeFileForm.name.$dirty && newExeFileForm.name.$invalid") Name is invalid
+    button.button.primary.mt-5.float-right(ng-click="createExeFile()"
+        ng-disabled="newExeFileForm.name.$invalid") Create
