Window conflict repaired successfully

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -142,7 +142,7 @@ html {
   color: #ffffff !important;
 }
 
-.btn-close:hover {
+.custom-btn-close:hover {
   background-color: #d22424 !important;
 }
 
