--- a/resources/sass/app.sass
+++ b/resources/sass/app.sass
@@ -95,7 +95,7 @@ main , .container-fluid , body , html
   overflow: hidden !important
 .input-material input
   color: #ffffff !important
-.btn-close:hover
+.custom-btn-close:hover
   background-color: #d22424 !important
 .ng-view
   height: 100% !important
