--- a/resources/views/index.pug
+++ b/resources/views/index.pug
@@ -46,7 +46,7 @@ html(lang="fa")
                     var customButtons = [
                         {
                             html: "<span class='mif-cross'></span>",
-                            cls: "btn-close fg-white inherit-background",
+                            cls: "custom-btn-close fg-white inherit-background",
                             onclick: "$('.window').addClass('size-0');window.location.hash = '/'"
                         }
                     ];
