editor tabs maximum width fixed !

--- a/resources/views/index.pug
+++ b/resources/views/index.pug
@@ -29,7 +29,7 @@ html(lang="fa")
                     .row.no-gap.h-100
                         .cell-md-3.directory-structure.fg-white.h-100
                         .cell-md-9.h-100
-                            .editor-tabs.fg-white
+                            .editor-tabs.fg-white.simpleBar
                                 ul.list-style-none.m-0.d-flex
                             .code-editor.w-100: .editor
                 div.thin-menu.fg-white.bottom-menu(data-role="appbar" data-expand-point="md")
