--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -97,6 +97,14 @@ html {
   background-color: #131a20 !important;
 }
 
+.ace-monokai .ace_tooltip {
+  background-color: #1c2731 !important;
+  border: 1px solid rgba(255, 255, 255, 0.1) !important;
+  border-radius: 0 !important;
+  color: #ffffff !important;
+  padding: 15px !important;
+}
+
 .ace-monokai .ace_gutter {
   background-color: #172028 !important;
 }
@@ -160,6 +168,10 @@ html {
 
 .directory-structure li {
   min-width: 300px;
+}
+
+.directory-structure li:not(.Directory) span {
+  white-space: nowrap !important;
 }
 
 .directory-structure li.dir i.mif-chevron-thin-down {
@@ -238,6 +250,7 @@ html {
 
 .editor-tabs li span.name {
   font-weight: 100;
+  white-space: nowrap !important;
 }
 
 .editor-tabs li img {
