--- a/resources/sass/app.sass
+++ b/resources/sass/app.sass
@@ -78,6 +78,8 @@ main , .container-fluid , body , html
   .ace_gutter
     background-color: #172028 !important
   .ace_marker-layer
+    .ace_selection
+      background: rgba(0, 102, 255 , 0.4) !important
     .ace_active-line
       background: rgba(255,255,255,0.1) !important
   .ace_gutter-active-line
