IDE Controller seprated !

--- a/resources/views/index.pug
+++ b/resources/views/index.pug
@@ -36,7 +36,7 @@ html(lang="fa")
                     .app-bar-menu
                         li: a(href="#!") Home
                         li: a(href="#!") File
-                        li: a(href="#!") View
+                        li: a(href="#!") Terminal
                 div.thin-menu.fg-white(data-role="appbar" data-expand-point="md")
                     .app-bar-menu.w-100
                         li.ml-auto: a {{cursor_row}}:{{cursor_col}}
