--- a/resources/sass/app.sass
+++ b/resources/sass/app.sass
@@ -30,6 +30,8 @@
   font-style: italic !important
 .font-bold
   font-weight: 700 !important
+.opacity-m
+  opacity: 0.5 !important
 main , .container-fluid , body , html
   height: 100%
 .app-bar.thin-menu
@@ -155,6 +157,9 @@ main , .container-fluid , body , html
     cursor: default !important
 .iw-mSelected
   background-color: #117ae3 !important
+.iw-mDisable
+  .iw-mOverlay
+    background: transparent !important
 .iw-mIcon
   margin-left: 5px !important
 .editor-tabs
