--- a/resources/sass/app.sass
+++ b/resources/sass/app.sass
@@ -183,8 +183,14 @@ a:hover
   text-decoration: none !important
 /* New Project SASS
 .new_project
+  .repositories_list
+    li
+      background-color: rgba(255, 255, 255, 0.1)
+      cursor: default !important
   input
     color: #ffffff !important
+  img
+    width: 30px
 li[data-text=""]
   display: none !important
 /* Close Project SASS
