--- a/resources/views/windows/new_project.pug
+++ b/resources/views/windows/new_project.pug
@@ -1,5 +1,12 @@
 .row.no-gap.h-100.new_project
-    .col-md-5(style="background-color:#131a20") This is sidebar
+    .col-md-5.fg-white(style="background-color:#131a20;overflow-y:auto")
+        h6
+            img.mr-1.ml-3(src="assets/img/icons/folder-app.svg" style="margin-bottom:7px")
+            = 'Starter Projects'
+        ul.list-style-none.repositories_list
+            li.p-2.mb-1(ng-repeat="r in repositories_list" data-url="{{r.url}}")
+                img.mr-1(src="{{r.img}}")
+                span {{r.name}}
     .col-md-7.px-5
         form(name="newProjectForm" novalidate)
             input.fg-white(type="text" data-role="materialinput"
@@ -14,7 +21,7 @@
             small.fg-red(ng-show="newProjectForm.slug.$dirty && newProjectForm.slug.$invalid") Slug must contain a-z or A-Z letters or numbers
             br
             label.mt-5.fg-white Based on
-            select.mt-2(data-role="select" ng-model="project_type")
+            select.mt-2.projectType(data-role="select" data-filter="false" ng-change="selectChanged()" ng-model="project_type")
                 option(value="1" data-template="<span class='mif-database icon'></span> $1") Database
                 option(value="2" data-template="<span class='mif-insert-drive-file icon'></span> $1") File
             small.fg-red(ng-hide="project_duplicated") Project is duplicated
