--- a/resources/sass/app.sass
+++ b/resources/sass/app.sass
@@ -187,8 +187,12 @@ a:hover
     li
       background-color: rgba(255, 255, 255, 0.1)
       cursor: default !important
+    li.active
+      background-color: #117ae3 !important
   input
     color: #ffffff !important
+  div[disabled="disabled"]
+    opacity: 0.4
   img
     width: 30px
 li[data-text=""]
